# WearCapture

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-binaries.yml  ci.yml
scripts/: entry_cli.py  entry_ui.py  package.py
tests/: synthetic_fixtures.py  test_image_ops.py  test_profiles.py  test_regression_synthetic.py
wearcapture/: __init__.py  adb.py  capture_engine.py  cli.py  config.py  errors.py  image_ops.py  logging_utils.py  profiles.py  ui.py
